Fixed RemoveImportTest