@@ -15,6 +15,7 @@
  */
 package org.springframework.sbm.support.openrewrite.java;
 
+import org.intellij.lang.annotations.Language;
 import org.openrewrite.RecipeRun;
 import org.springframework.sbm.java.OpenRewriteTestSupport;
 import org.springframework.sbm.support.openrewrite.GenericOpenRewriteRecipe;
@@ -24,7 +25,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.openrewrite.java.tree.J;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -33,22 +33,26 @@ class RemoveAnnotationVisitorTest {
 
     @Test
     void removeAnnotationOnTypeLevel() {
-        String javaSource =
-                "import org.junit.jupiter.api.extension.ExtendWith;\n" +
-                        "import org.mockito.junit.jupiter.MockitoExtension;\n" +
-                        "import org.junit.jupiter.api.Disabled;\n" +
-                        "@ExtendWith(MockitoExtension.class)\n" +
-                        "@Disabled\n" +
-                        "public class Foo {" +
-                        "}";
+        @Language("java")
+        String javaSource = """
+                import org.junit.jupiter.api.extension.ExtendWith;
+                import org.mockito.junit.jupiter.MockitoExtension;
+                import org.junit.jupiter.api.Disabled;
+                 
+                @ExtendWith(MockitoExtension.class)
+                @Disabled
+                public class Foo {}
+                """;
 
-        String expected =
-                "import org.mockito.junit.jupiter.MockitoExtension;\n" +
-                        "import org.junit.jupiter.api.Disabled;\n" +
-                        "\n" +
-                        "@Disabled\n" +
-                        "public class Foo {" +
-                        "}";
+        @Language("java")
+        String expected = """
+                import org.mockito.junit.jupiter.MockitoExtension;
+                import org.junit.jupiter.api.Disabled;
+                
+                
+                @Disabled
+                public class Foo {}
+                """;
 
         J.CompilationUnit cu = OpenRewriteTestSupport.createCompilationUnitsFromStrings(List.of("org.junit.jupiter:junit-jupiter-api:5.7.0"), javaSource).get(0);
         RemoveAnnotationVisitor sut = new RemoveAnnotationVisitor(cu.getClasses().get(0), "org.junit.jupiter.api.extension.ExtendWith");
@@ -58,87 +62,111 @@ class RemoveAnnotationVisitorTest {
 
     @Test
     void removeAnnotationOnMethodLevel() {
-        String given =
-                "import javax.ejb.*;\n" +
-                        "@TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)\n" +
-                        "public class TransactionalService {\n" +
-                        "   public void requiresNewFromType() {}\n" +
-                        "   @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)\n" +
-                        "   public void notSupported() {}\n" +
-                        "   @TransactionAttribute(TransactionAttributeType.MANDATORY)\n" +
-                        "   public void mandatory() {}\n" +
-                        "}";
+        @Language("java")
+        String given = """
+                import javax.ejb.*;
+                
+                @TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
+                public class TransactionalService {
+                
+                    public void requiresNewFromType() {}
+                
+                    @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
+                    public void notSupported() {}
+                                
+                    @TransactionAttribute(TransactionAttributeType.MANDATORY)
+                    public void mandatory() {}
+                }
+                """;
 
-        String expected =
-                "import javax.ejb.*;\n" +
-                        "@TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)\n" +
-                        "public class TransactionalService {\n" +
-                        "   public void requiresNewFromType() {}\n" +
-                        "   \n" +
-                        "   public void notSupported() {}\n" +
-                        "   \n" +
-                        "   public void mandatory() {}\n" +
-                        "}";
+        @Language("java")
+        String expected = """
+                import javax.ejb.*;
+                
+                @TransactionAttribute(TransactionAttributeType.REQUIRES_NEW)
+                public class TransactionalService {
+                
+                    public void requiresNewFromType() {}
+                
+                   \s
+                    public void notSupported() {}
+                
+                   \s
+                    public void mandatory() {}
+                }
+                """;
 
         J.CompilationUnit cu = OpenRewriteTestSupport.createCompilationUnitsFromStrings(List.of("javax.ejb:javax.ejb-api:3.2"), given).get(0);
 
         List<J.MethodDeclaration> methodDeclarationList = cu.getClasses().get(0).getBody().getStatements().stream()
                 .filter(J.MethodDeclaration.class::isInstance)
                 .map(J.MethodDeclaration.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
         J.CompilationUnit result = cu;
         for (J.MethodDeclaration md : methodDeclarationList) {
             RemoveAnnotationVisitor sut1 = new RemoveAnnotationVisitor(md, "javax.ejb.TransactionAttribute");
-            RecipeRun run = new GenericOpenRewriteRecipe(() -> sut1).run(List.of(result));
+            RecipeRun run = new GenericOpenRewriteRecipe<>(() -> sut1).run(List.of(result));
             if (!run.getResults().isEmpty()) {
                 result = (J.CompilationUnit) run.getResults().get(0).getAfter();
             }
         }
 
-        assertThat(result.print()).isEqualTo(expected);
+        assertThat(result.print()).isEqualToNormalizingNewlines(expected);
     }
 
     @Test
     void removeAnnotationOnMemberLevel() {
-        String given =
-                "import javax.ejb.*;\n" +
-                        "@EJB\n" +
-                        "public class TransactionalService {\n" +
-                        "   @EJB\n" +
-                        "   private Object that;\n" +
-                        "   private Object other;\n" +
-                        "   @EJB\n" +
-                        "   public void setEJB(Object some) {}\n" +
-                        "}";
+        @Language("java")
+        String given = """
+                import javax.ejb.EJB;
+                
+                @EJB
+                public class TransactionalService {
+                
+                    @EJB
+                    private Object that;
+                
+                    private Object other;
+                
+                    @EJB
+                    public void setEJB(Object some) {}
+                }
+                """;
 
-        String expected =
-                "import javax.ejb.*;\n" +
-                        "@EJB\n" +
-                        "public class TransactionalService {\n" +
-                        "   \n" +
-                        "   private Object that;\n" +
-                        "   private Object other;\n" +
-                        "   @EJB\n" +
-                        "   public void setEJB(Object some) {}\n" +
-                        "}";
+        @Language("java")
+        String expected = """
+                import javax.ejb.EJB;
+                
+                @EJB
+                public class TransactionalService {
+                
+                   \s
+                    private Object that;
+                
+                    private Object other;
+                
+                    @EJB
+                    public void setEJB(Object some) {}
+                }
+                """;
 
         J.CompilationUnit cu = OpenRewriteTestSupport.createCompilationUnitsFromStrings(List.of("javax.ejb:javax.ejb-api:3.2"), given).get(0);
 
         List<J.VariableDeclarations> variableDeclarations = cu.getClasses().get(0).getBody().getStatements().stream()
                 .filter(J.VariableDeclarations.class::isInstance)
                 .map(J.VariableDeclarations.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
         J.CompilationUnit result = cu;
         for (J.VariableDeclarations vd : variableDeclarations) {
             RemoveAnnotationVisitor sut1 = new RemoveAnnotationVisitor(vd, "javax.ejb.EJB");
-            RecipeRun run = new GenericOpenRewriteRecipe(() -> sut1).run(List.of(result));
+            RecipeRun run = new GenericOpenRewriteRecipe<>(() -> sut1).run(List.of(result));
             if (!run.getResults().isEmpty()) {
                 result = (J.CompilationUnit) run.getResults().get(0).getAfter();
             }
         }
 
-        assertThat(result.print()).isEqualTo(expected);
+        assertThat(result.print()).isEqualToNormalizingNewlines(expected);
     }
 }
